Fix add_recipe form white space

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -200,6 +200,10 @@
     color: #116466;
 }
 
+.add-recipe-label {
+    width: 0 !important;
+}
+
 
 /* register.html */
 #background-register-image {
